[package]
name = "esp32-tests"
version = "0.1.0"
authors = ["Han Hossain <ahanuf12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32-hal = "0.2.0"
esp32-logger = { git = "https://github.com/hanhossain/esp32-logger" }
log = "0.4.14"
